fix(playground): align grid columns

--- a/components/playground/element.css
+++ b/components/playground/element.css
@@ -8,6 +8,7 @@
   grid-template-columns: 1fr 1fr;
 
   gap: 1rem;
+  align-items: stretch;
 
   height: 100%;
 
@@ -29,7 +30,7 @@
       gap: 0.5rem;
       align-items: center;
 
-      padding: 0.5rem;
+      padding: 0.57rem;
 
       h1 {
         margin: 0;
